# modelDeploy

./: .gitattributes  .gitignore  README.md  gradio_app.py  gradio_demo.py  model2onnx.py  requirements.txt  test_model.py  utils.py
Demo/: settings.gradle
Demo/app/: build.gradle
Demo/app/src/androidTest/java/com/example/ncnndemo/: ExampleInstrumentedTest.java
Demo/app/src/main/: AndroidManifest.xml
Demo/app/src/main/java/com/example/ncnndemo/: FirstFragment.java~  MainActivity.java  SecondFragment.java
Demo/app/src/main/res/layout/: activity_main.xml
Demo/app/src/main/res/menu/: menu_main.xml
Demo/app/src/main/res/navigation/: nav_graph.xml
Demo/app/src/main/res/values/: strings.xml  themes.xml
Demo/app/src/main/res/values-night/: themes.xml
Demo/app/src/test/java/com/example/ncnndemo/: ExampleUnitTest.java
SRCNN/: srcnn.onnx  srcnn_sim.onnx
model/: LWDNet_arch.py  safmn_arch.py  srcnn_arch.py
model_to_onnx/: README.md  SRCNN.py  model_to_onnx.py  srcnn.onnx  srcnn_sim.onnx
ncnn/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  srcnn_sim-opt.param
onnx/: README.md  load_onnx.py
